[package]
name = "netsblox-extension-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Stein"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["console"] }
netsblox-extension-macro = { path = "./netsblox-extension-macro" }
netsblox-extension-util = { path = "./netsblox-extension-util" }

[build-dependencies]
netsblox-extension-util = { path = "./netsblox-extension-util" }