[package]
name = "netsblox-extension-rs"
version = "0.2.2"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gsteinLTU/netsblox-extension-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["console"] }
netsblox-extension-macro = { path = "./netsblox-extension-macro" }
netsblox-extension-util = { path = "./netsblox-extension-util" }
console_error_panic_hook = "0.1.7"

[build-dependencies]
netsblox-extension-util = { path = "./netsblox-extension-util" }
