[package]
name = "netsblox-extension-macro"
version = "0.1.0"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gsteinLTU/netsblox-extension-rs"
description = "Macros used by netsblox-extension-util"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
