[package]
name = "netsblox-extension-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
syn = { version = "2.0.16", features = ["full"] }
simple-error = { version = "0.3.0" }
serde_json = { version = "1.0.96" }
regex = { version = "1.8.2" }

[build-dependencies]
serde = {version = "1.0.163", features = ["derive"]}
syn = { version = "2.0.16", features = ["full"] }
simple-error = { version = "0.3.0" }
serde_json = { version = "1.0.96" }
regex = { version = "1.8.2" }
