[package]
name = "netsblox-extension-util"
version = "0.2.5"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gsteinLTU/netsblox-extension-rs"
description = "Allows for automatic generation of a NetsBlox extension that uses WASM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
syn = { version = "2.0.16", features = ["full", "extra-traits"] }
simple-error = { version = "0.3.0" }
serde_json = { version = "1.0.96" }
regex = { version = "1.8.2" }
proc-macro2 = { version = "1.0.59" }
web-sys = { version = "0.3.63", features = ["Storage", "Window", "Document"] }

[build-dependencies]
serde = {version = "1.0.163", features = ["derive"]}
syn = { version = "2.0.16", features = ["full", "extra-traits"] }
simple-error = { version = "0.3.0" }
serde_json = { version = "1.0.96" }
regex = { version = "1.8.2" }
proc-macro2 = { version = "1.0.59" }
