[package]
name = "netsblox-extension-util"
version = "0.2.7"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gsteinLTU/netsblox-extension-rs"
description = "Allows for automatic generation of a NetsBlox extension that uses WASM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
syn = { version = "2.0", features = ["full", "extra-traits"] }
simple-error = { version = "0.3.1" }
serde_json = { version = "1.0" }
regex = { version = "1.11" }
proc-macro2 = { version = "1.0" }
web-sys = { version = "0.3", features = ["Storage", "Window", "Document"] }

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
syn = { version = "2.0", features = ["full", "extra-traits"] }
simple-error = { version = "0.3" }
serde_json = { version = "1.0" }
regex = { version = "1.11" }
proc-macro2 = { version = "1.0" }
